# automatisk-filtrering-af-medcoms-for-sambovagten

./: .env.example  Indsatser.xlsx  README.md  excel_loader.py  main.py  pyproject.toml
