[project]
name = "process-template"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "kmd-nexus-client",
    "odk-tools",
    "openpyxl>=3.1.5",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.0" }
kmd-nexus-client = { git = "https://github.com/odense-rpa/nexus-client.git", branch = "development" }
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git", branch = "master" }
